# sqlite-rust

./: .gitignore  Cargo.toml  README.md
src/: cell.rs  commands.rs  database.rs  lib.rs  main.rs  record.rs  varint.rs
src/database/: cell.rs  database.rs  mod.rs  record.rs  schema.rs
src/query/: commands.rs  mod.rs
src/ui/: mod.rs  tui.rs
