[package]
name = "sqlite-rust"
version = "0.1.0"
authors = ["siddid"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
ratatui = "0.26"                                 # terminal UI
crossterm = "0.27"                               # cross-platform terminal
